chore(global): use pm2 from node_modules with alpine image

--- a/apps/widget/Dockerfile
+++ b/apps/widget/Dockerfile
@@ -86,7 +86,7 @@ EXPOSE 9009
 ############
 # BUILD
 ############
-FROM keymetrics/pm2:16-alpine AS base-production
+FROM node:16.9-alpine AS base-production
 
 WORKDIR /usr/app
 
@@ -112,7 +112,7 @@ RUN yarn install --no-progress --frozen-lockfile --check-files --production
 RUN yarn autoclean --force
 
 
-FROM keymetrics/pm2:16-alpine as widget-production
+FROM node:16.9-alpine as widget-production
 
 ENV PORT 8000
 
@@ -129,6 +129,6 @@ COPY --from=base-production /usr/app/node_modules ./node_modules
 
 EXPOSE 8000
 
-CMD [ "pm2-runtime", "start", "ecosystem.config.js", "--only", "widget-production" ]
+CMD [ "node_modules/.bin/pm2-runtime", "start", "ecosystem.config.js", "--only", "widget-production" ]
 
 HEALTHCHECK --interval=20s CMD curl --fail http://localhost:8000 || exit 1
