--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -8,9 +8,9 @@
 				"yarn": "~1.22"
 		},
 		"dependencies": {
-				"@loadable/component": "^5.15.0",
-				"@loadable/server": "~5.15.0",
-				"@loadable/webpack-plugin": "^5.15.0",
+				"@loadable/component": "5.15.2",
+				"@loadable/server": "5.15.2",
+				"@loadable/webpack-plugin": "5.15.2",
 				"@make.org/api": "^0.1.0",
 				"@make.org/assets": "0.1.0",
 				"@make.org/components": "0.1.0",
@@ -21,29 +21,29 @@
 				"adblockdetect": "^0.0.2",
 				"athena-design-tokens": "^0.1.7",
 				"axios": "~0.26.1",
-				"axios-retry": "~3.2.4",
+				"axios-retry": "~3.2.6",
 				"babel-register": "^6.26.0",
 				"compression": "~1.7.3",
 				"cors": "^2.8.5",
 				"deep-freeze": "~0.0.1",
 				"dotenv": "^10.0.0",
-				"dotenv-webpack": "^7.0.3",
-				"express": "~4.17.1",
+				"dotenv-webpack": "^7.1.1",
+				"express": "^4.17.3",
 				"express-prom-bundle": "~6.3.6",
 				"favicons": "6.2.2",
 				"favicons-webpack-plugin": "^5.0.2",
 				"glider-js": "^1.7.7",
 				"helmet-csp": "~3.4.0",
-				"history": "^5.0.0",
-				"html-webpack-plugin": "^5.3.2",
-				"http-proxy-middleware": "~2.0.4",
+				"history": "^5.3.0",
+				"html-webpack-plugin": "^5.5.0",
+				"http-proxy-middleware": "2.0.6",
 				"i18next": "^20.3.1",
 				"js-yaml": "^4.1.0",
 				"memory-cache": "~0.2.0",
-				"node-mocks-http": "^1.10.1",
+				"node-mocks-http": "^1.11.0",
 				"pm2": "~5.2.0",
 				"prom-client": "^13.1.0",
-				"query-string": "7.0.0",
+				"query-string": "^7.1.1",
 				"react": "^17.0.2",
 				"react-autosize-textarea": "~7.1.0",
 				"react-cookie": "^4.1.1",
@@ -51,69 +51,69 @@
 				"react-facebook-login": "~4.1.1",
 				"react-google-login": "~5.2.2",
 				"react-head": "~3.4.0",
-				"react-modal": "^3.14.3",
-				"react-router": "^5.2.0",
-				"react-router-dom": "^5.2.0",
+				"react-modal": "^3.15.1",
+				"react-router": "^5.3.3",
+				"react-router-dom": "^5.3.3",
 				"serve-favicon": "^2.5.0",
-				"serve-static": "~1.14.1",
+				"serve-static": "~1.14.2",
 				"source-map": "^0.7.3",
-				"styled-components": "~5.3.0",
-				"terser-webpack-plugin": "^5.1.3",
-				"ua-parser-js": "~0.7.28",
+				"styled-components": "5.3.5",
+				"terser-webpack-plugin": "^5.3.3",
+				"ua-parser-js": "~0.7.31",
 				"universal-cookie": "~4.0.4",
 				"universal-cookie-express": "~4.0.0",
 				"url-search-params-polyfill": "^8.1.1",
 				"uuid": "^8.3.0",
-				"webpack": "^5.46.0",
+				"webpack": "^5.74.0",
 				"webpack-manifest": "^1.0.8",
 				"webpack-manifest-plugin": "^3.1.1",
 				"webpack-merge": "^5.8.0",
 				"webpack-node-externals": "^3.0.0",
-				"winston": "~3.3.3",
-				"yargs": "^17.1.1"
+				"winston": "~3.3.4",
+				"yargs": "^17.5.1"
 		},
 		"devDependencies": {
-				"@babel/core": "^7.15.0",
-				"@babel/plugin-proposal-optional-chaining": "^7.14.5",
-				"@babel/preset-typescript": "^7.15.0",
-				"@babel/register": "^7.14.5",
-				"@cypress/code-coverage": "^3.9.10",
+				"@babel/core": "7.18.10",
+				"@babel/plugin-proposal-optional-chaining": "7.18.9",
+				"@babel/preset-typescript": "7.18.6",
+				"@babel/register": "7.18.9",
+				"@cypress/code-coverage": "3.10.0",
 				"@loadable/babel-plugin": "~5.13.2",
 				"@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
 				"@simbathesailor/use-what-changed": "^2.0.0",
-				"@svgr/cli": "~5.5.0",
+				"@svgr/cli": "^6.3.1",
 				"@types/compression": "^1.7.1",
 				"@types/cors": "^2.8.12",
 				"@types/deep-freeze": "^0.1.2",
 				"@types/express": "^4.17.13",
 				"@types/loadable__server": "^5.12.6",
-				"@types/memory-cache": "^0.2.1",
-				"@types/node": "^16.4.1",
-				"@types/react": "^17.0.13",
-				"@types/react-dom": "^17.0.2",
-				"@types/react-router-dom": "^5.1.8",
+				"@types/memory-cache": "^0.2.2",
+				"@types/node": "^18.6.4",
+				"@types/react": "^17.0.48",
+				"@types/react-dom": "^17.0.17",
+				"@types/react-router-dom": "5.3.3",
 				"@types/serve-favicon": "^2.5.3",
 				"@types/ua-parser-js": "^0.7.36",
 				"@types/universal-cookie": "^3.0.0",
 				"@types/webpack": "^5.28.0",
-				"@types/webpack-env": "^1.16.2",
-				"babel-loader": "^8.2.2",
-				"core-js": "^3.16.2",
+				"@types/webpack-env": "1.17.0",
+				"babel-loader": "8.2.5",
+				"core-js": "^3.24.1",
 				"cypress": "^7.4.0",
-				"cypress-cucumber-preprocessor": "^4.1.2",
+				"cypress-cucumber-preprocessor": "^4.3.1",
 				"cypress-html-validate": "^1.5.1",
-				"cypress-wait-until": "^1.7.1",
+				"cypress-wait-until": "1.7.2",
 				"file-loader": "^6.2.0",
 				"html-validate": "4.13.1",
 				"html-webpack-inline-source-plugin": "1.0.0-beta.2",
-				"html-webpack-plugin": "^5.3.2",
+				"html-webpack-plugin": "^5.5.0",
 				"react-is": "17.0.2",
 				"regenerator-runtime": "^0.13.7",
 				"start-server-and-test": "^1.13.1",
 				"tsconfig-paths": "^3.9.0",
-				"webpack-cli": "^4.7.2",
-				"webpack-dev-server": "^3.11.2",
-				"yaml-jest": "^1.0.5",
+				"webpack-cli": "^4.10.0",
+				"webpack-dev-server": "^3.11.3",
+				"yaml-jest": "^1.2.0",
 				"yaml-loader": "^0.6.0"
 		},
 		"scripts": {
