--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -8,9 +8,9 @@
     "yarn": "~1.22"
   },
   "dependencies": {
-    "@loadable/component": "^5.15.0",
-    "@loadable/server": "~5.15.0",
-    "@loadable/webpack-plugin": "^5.15.0",
+    "@loadable/component": "5.15.2",
+    "@loadable/server": "5.15.2",
+    "@loadable/webpack-plugin": "5.15.2",
     "@make.org/api": "^0.1.0",
     "@make.org/assets": "^0.1.0",
     "@make.org/components": "0.1.0",
@@ -18,24 +18,24 @@
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.48",
+    "@types/react-dom": "^17.0.17",
     "athena-design-tokens": "^0.1.7",
     "compression": "~1.7.3",
     "cors": "^2.8.5",
     "deep-freeze": "~0.0.1",
     "dotenv": "^10.0.0",
-    "dotenv-webpack": "^7.0.3",
-    "express": "~4.17.1",
-    "express-prom-bundle": "^6.4.1",
+    "dotenv-webpack": "^7.1.1",
+    "express": "^4.17.3",
+    "express-prom-bundle": "^6.5.0",
     "favicons": "6.2.2",
     "favicons-webpack-plugin": "^5.0.2",
-    "html-webpack-plugin": "^5.3.2",
-    "http-proxy-middleware": "~2.0.4",
+    "html-webpack-plugin": "^5.5.0",
+    "http-proxy-middleware": "2.0.6",
     "i18next": "^20.3.4",
     "memory-cache": "~0.2.0",
     "pm2": "~5.2.0",
@@ -43,44 +43,44 @@
     "react-cookie": "~4.0.0",
     "react-dom": "^17.0.2",
     "react-head": "^3.4.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.3",
     "serve-favicon": "^2.5.0",
-    "serve-static": "~1.14.1",
+    "serve-static": "~1.14.2",
     "source-map": "^0.7.3",
-    "styled-components": "^5.3.0",
-    "terser-webpack-plugin": "^5.1.3",
-    "ua-parser-js": "~0.7.28",
+    "styled-components": "5.3.5",
+    "terser-webpack-plugin": "^5.3.3",
+    "ua-parser-js": "~0.7.31",
     "universal-cookie": "~4.0.4",
     "universal-cookie-express": "~4.0.0",
     "uuid": "^8.3.0",
-    "webpack": "^5.51.1",
+    "webpack": "^5.74.0",
     "webpack-manifest": "^1.0.8",
     "webpack-manifest-plugin": "^3.1.1",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0",
-    "winston": "~3.3.3"
+    "winston": "~3.3.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
-    "@babel/register": "^7.14.5",
-    "@cypress/code-coverage": "^3.9.10",
+    "@babel/core": "7.18.10",
+    "@babel/plugin-proposal-optional-chaining": "7.18.9",
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/register": "7.18.9",
+    "@cypress/code-coverage": "3.10.0",
     "@loadable/babel-plugin": "^5.13.2",
-    "@types/memory-cache": "^0.2.1",
-    "babel-loader": "^8.2.2",
+    "@types/memory-cache": "^0.2.2",
+    "babel-loader": "8.2.5",
     "cypress": "^7.4.0",
-    "cypress-cucumber-preprocessor": "^4.1.2",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-html-validate": "^1.5.1",
-    "cypress-wait-until": "^1.7.1",
+    "cypress-wait-until": "1.7.2",
     "file-loader": "^6.2.0",
     "html-validate": "4.13.1",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.0",
     "prom-client": "^13.1.0",
     "start-server-and-test": "^1.13.1",
     "tsconfig-paths": "^3.9.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.11.3",
     "yaml-loader": "^0.6.0"
   },
   "scripts": {
