--- a/assets/package.json
+++ b/assets/package.json
@@ -11,12 +11,12 @@
         "athena-design-tokens": "^0.1.7",
         "react": "^17.0.2",
         "react-test-renderer": "^17.0.2",
-        "styled-components": "^5.3.0"
+        "styled-components": "5.3.5"
     },
     "devDependencies": {
         "file-loader": "^6.2.0",
         "react-test-renderer": "^17.0.2",
-        "webpack": "^5.45.0",
-        "webpack-cli": "^4.7.2"
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
     }
 }
