--- a/package.json
+++ b/package.json
@@ -32,41 +32,43 @@
     "ci:cypress:widget": "start-server-and-test 'yarn workspace @make.org/widget server:test' 9008 'yarn cypress:widget:run'"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@commitlint/cli": "^12.1.4",
+    "@babel/cli": "7.18.10",
+    "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^12.1.4",
-    "@svgr/cli": "^6.1.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@types/enzyme": "^3.10.9",
-    "@types/jsdom": "^16.2.13",
-    "@typescript-eslint/eslint-plugin": "^4.28.0",
-    "@typescript-eslint/parser": "^4.28.0",
+    "@svgr/cli": "^6.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/enzyme": "^3.10.12",
+    "@types/jsdom": "^16.2.15",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-plugin-convert-to-json": "^0.1.0",
     "enzyme": "^3.11.0",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "~8.3.0",
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "~8.5.0",
     "eslint-import-resolver-babel-module": "~5.3.1",
-    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "~24.3.6",
+    "eslint-plugin-jest": "~26.7.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "~3.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-security": "~1.4.0",
+    "eslint-plugin-prettier": "~4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-security": "~1.5.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
-    "jest-styled-components": "^7.0.5",
+    "jest-styled-components": "7.0.5",
     "jscpd": "^3.3.26",
     "jsdom": "^16.6.0",
     "lerna": "4.0.0",
     "lerna-update-wizard": "^1.1.2",
     "prettier": "^2.3.1",
-    "ts-jest": "^27.0.4",
-    "ts-node": "^10.2.1"
+    "ts-jest": "27.1.5",
+    "ts-node": "10.9.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/webpack-env": "^1.17"
+  }
 }
