--- a/ui/package.json
+++ b/ui/package.json
@@ -8,19 +8,19 @@
     "@make.org/types": "0.1.0",
     "@make.org/ui": "0.1.0",
     "@make.org/utils": "0.1.0",
-    "@types/node": "^15.12.5",
-    "@types/react": "^17.0.11",
-    "@types/styled-components": "^5.1.11",
+    "@types/node": "^18.6.4",
+    "@types/react": "^17.0.48",
+    "@types/styled-components": "5.1.25",
     "athena-design-tokens": "^0.1.7",
     "i18next": "^20.3.4",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.3",
     "react-test-renderer": "^17.0.2",
     "snapshot-diff": "^0.9.0",
-    "styled-components": "^5.3.0",
-    "typescript": "^4.3.4"
+    "styled-components": "5.3.5",
+    "typescript": "^4.7.4"
   },
   "browserslist": {
     "production": [
@@ -35,10 +35,10 @@
     ]
   },
   "devDependencies": {
-    "core-js": "^3.16.2",
+    "core-js": "^3.24.1",
     "snapshot-diff": "^0.9.0",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "svg": "yarn svgr --template ./Svg/svgrTemplate.js --no-index --typescript -d ./Svg/elements ./Svg/svgr && cp -r ./Svg/svgr/* ./Svg/source"
