--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -90,6 +90,8 @@
     "server:dev": "pm2-runtime start ecosystem.config.js --only widget-dev",
     "server:test": "pm2-runtime start ecosystem.config.js --only 'api-mock,widget-test'",
     "translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
-    "translation:fix": "yarn run translation --fix"
+    "translation:fix": "yarn run translation --fix",
+    "translation:unused-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-unused -d ./i18n -l 'fr'",
+    "translation:orphan-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-orphan -d ./i18n -l 'fr'"
   }
 }
