--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "jest-styled-components": "7.0.5",
+    "jest-transform-yaml": "1.0.0",
     "jscpd": "^3.3.26",
     "jsdom": "^16.6.0",
     "lerna": "4.0.0",
