--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -126,8 +126,8 @@
 				"documentation:fix": "bin/check-documentation.js check --fix",
 				"translation": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js check -d ./i18n -l 'fr'",
 				"translation:fix": "yarn run translation --fix",
-				"translation:unused-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-unused -d ./i18n -l 'fr'",
-				"translation:orphan-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-orphan -d ./i18n -l 'fr'",
+				"translation:unused-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-unused",
+				"translation:orphan-keys": "npx babel --out-dir ../../dist/lib --config-file ./webpack/babel.config.js ../../bin/utils && ../../bin/check-translation.js list-orphan",
 				"accessibility": "bin/checkAccessibility.js check"
 		}
 }
