--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "lerna-update-wizard": "^1.1.2",
     "prettier": "^2.3.1",
     "ts-jest": "27.1.5",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/webpack-env": "^1.17"
