--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "**/*.md"
   ],
   "compilerOptions": {
+    "rootDir": ".",
     "baseUrl": "./types/index",
     "lib": ["dom", "dom.iterable", "ES2021"],
     "allowJs": true,
@@ -32,7 +33,7 @@
     "jsx": "react",
     "target": "ES2021",
     "sourceMap": true,
-    "rootDir": ".",
+    "composite": true,
     "paths": {
       "@make.org/widget": ["./apps/widget/*"],
       "@make.org/front": ["./apps/front/*"],
