--- a/utils/tsconfig.json
+++ b/utils/tsconfig.json
@@ -1,24 +1,14 @@
 {
+  "extends": "../tsconfig.json",
+  "include": [
+    "./services/Trackers/fbq.js",
+    "./services/Trackers/twttr.js",
+  ],
   "references": [
     { "path": "../api" },
     { "path": "../assets" },
     { "path": "../components" },
     { "path": "../store" },
     { "path": "../ui" }
-  ],
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "composite": true
-  },
-  "paths": {
-    "@make.org/widget": ["../apps/widget/*"],
-    "@make.org/front": ["../apps/front/*"],
-    "@make.org/components": ["../components/*"],
-    "@make.org/types": ["../types/*"],
-    "@make.org/api": ["../api/*"],
-    "@make.org/assets": ["../assets/*"],
-    "@make.org/utils": ["../utils/*"],
-    "@make.org/ui": ["../ui/*"],
-    "@make.org/store": ["../store/*"]
-  }
+  ]
 }
