refactor(global): switch to yarn 3 and regenerate yarn.lock

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,21 @@
 /reports
 /coverage
 /*/*/coverage
+/*/*/screenshots
 .dockerignore
 .husky
 Dockerfile
 docker-compose.dev.yaml
+/coverage
+.DS_Store
+yarn-error.log
+lerna-debug.log
+*.tsbuildinfo
+
+.pnp.*
+.yarn/*
+!.yarn/patches/*
+!.yarn/plugins/*
+!.yarn/releases/*
+!.yarn/sdks/*
+!.yarn/versions/*
