--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: makeorg/docker-arch-docker:latest
 
 variables: &global_variables
-  YARN_VERSION: "1.22.5"
+  YARN_VERSION: "3.2.3"
 
 cache:
   key: ${CI_COMMIT_REF_SLUG}
@@ -90,7 +90,9 @@ stages:
   before_script:
     - node -v
     - export YARN_VERSION="$YARN_VERSION"
-    - yarn install --check-files
+    - corepack enable yarn
+    - corepack prepare
+    - yarn install
   cache: []
 
 .build:
@@ -150,7 +152,7 @@ stages:
       echo "Job ${job_id} has ${status}.";
 
 .e2e:
-  image: cypress/browsers:node16.5.0-chrome94-ff93
+  image: cypress/browsers:node16.14.0-chrome99-ff97
   variables:
     CYPRESS_CACHE_FOLDER: '$CI_PROJECT_DIR/cache_cypress'
   artifacts:
