--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -5,7 +5,7 @@
 		"sideEffects": false,
 		"engines": {
 				"node": ">=14.17 <=16.9",
-				"yarn": "~1.22"
+				"yarn": "~3.2"
 		},
 		"dependencies": {
 				"@loadable/component": "5.15.2",
@@ -74,14 +74,17 @@
 		},
 		"devDependencies": {
 				"@babel/core": "7.18.10",
+				"@babel/plugin-proposal-class-properties": "^7.18.6",
 				"@babel/plugin-proposal-optional-chaining": "7.18.9",
+				"@babel/preset-env": "^7.16.0",
+				"@babel/preset-react": "^7.16.0",
 				"@babel/preset-typescript": "7.18.6",
 				"@babel/register": "7.18.9",
-				"@cypress/code-coverage": "3.10.0",
 				"@loadable/babel-plugin": "~5.13.2",
 				"@simbathesailor/babel-plugin-use-what-changed": "^2.1.0",
 				"@simbathesailor/use-what-changed": "^2.0.0",
 				"@svgr/cli": "^6.3.1",
+				"@types/babel__preset-env": "^7",
 				"@types/compression": "^1.7.1",
 				"@types/cors": "^2.8.12",
 				"@types/deep-freeze": "^0.1.2",
@@ -98,11 +101,8 @@
 				"@types/webpack": "^5.28.0",
 				"@types/webpack-env": "1.17.0",
 				"babel-loader": "8.2.5",
+				"babel-plugin-convert-to-json": "^0.1.0",
 				"core-js": "^3.24.1",
-				"cypress": "^7.4.0",
-				"cypress-cucumber-preprocessor": "^4.3.1",
-				"cypress-html-validate": "^1.5.1",
-				"cypress-wait-until": "1.7.2",
 				"file-loader": "^6.2.0",
 				"html-validate": "4.13.1",
 				"html-webpack-inline-source-plugin": "1.0.0-beta.2",
