--- a/apps/front/.env.cypress
+++ b/apps/front/.env.cypress
@@ -4,3 +4,4 @@ API_URL_CLIENT_SIDE=http://localhost:9000
 FRONT_URL=http://localhost:9009
 FB_PIXEL_ID=260470104426586
 FB_CONVERSION_TOKEN=
+HOTJAR_TOKEN=3247007
