--- a/utils/package.json
+++ b/utils/package.json
@@ -24,6 +24,7 @@
     "node-mocks-http": "^1.11.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-hotjar": "^5.2.0",
     "react-router": "^5.3.3",
     "source-map": "^0.7.3",
     "typescript": "^4.7.4",
