--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "@cypress/code-coverage": "3.10.0",
     "@svgr/cli": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@types/cypress-cucumber-preprocessor": "^4",
+    "@types/cypress-cucumber-preprocessor": "^4.0.1",
     "@types/enzyme": "^3.10.12",
     "@types/jsdom": "^16.2.15",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-plugin-convert-to-json": "^0.1.0",
     "cypress": "^7.4.0",
@@ -73,9 +73,9 @@
     "start-server-and-test": "^1.13.1",
     "ts-jest": "27.1.5",
     "ts-node": "10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "~4.8.0"
   },
   "dependencies": {
-    "@types/webpack-env": "^1.17"
+    "@types/webpack-env": "^1.18.0"
   }
 }
