--- a/package/utils/package.json
+++ b/package/utils/package.json
@@ -25,9 +25,8 @@
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-hotjar": "^5.2.0",
-    "react-router": "^5.3.3",
+    "react-router": "^5.3.4",
     "source-map": "^0.7.3",
-    "typescript": "^4.7.4",
     "universal-cookie": "^4.0.4",
     "url-search-params-polyfill": "^8.1.1",
     "uuid": "^8.3.2",
@@ -36,6 +35,7 @@
   "devDependencies": {
     "core-js": "^3.24.1",
     "mockdate": "^3.0.5",
+    "typescript": "~4.8.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
