feat(global): add new translator service
Add new logger (will need some refactor to use the new logger in other apps)
Refactor versionBuild script
Add a new node app
Add dockerfile to new app. Update gitlab-ci and docker-compose file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,19 @@
     "cypress/no-assigning-return-values": "error",
     "cypress/no-unnecessary-waiting": "error",
     "cypress/no-async-tests": "error",
-    "react/function-component-definition": [2, {"namedComponents": "arrow-function", "unnamedComponents": "arrow-function"}]
+    "react/function-component-definition": [2, {"namedComponents": "arrow-function", "unnamedComponents": "arrow-function"}],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "test.{ts,tsx}",
+          "test-*.{ts,tsx}",
+          "**/*{.,_}{test,spec}.{ts,tsx}",
+          "**/jest.config.ts",
+          "**/jest.setup.ts"
+        ],
+        "optionalDependencies": false
+      }
+    ]
   }
 }
