--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -37,7 +37,7 @@
 				"history": "^5.3.0",
 				"html-webpack-plugin": "^5.5.0",
 				"http-proxy-middleware": "2.0.6",
-				"i18next": "^20.3.1",
+				"i18next": "22.1.4",
 				"js-yaml": "^4.1.0",
 				"memory-cache": "~0.2.0",
 				"node-mocks-http": "^1.11.0",
