--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -36,7 +36,7 @@
     "favicons-webpack-plugin": "^5.0.2",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "2.0.6",
-    "i18next": "^20.3.4",
+    "i18next": "22.1.4",
     "memory-cache": "~0.2.0",
     "pm2": "~5.2.2",
     "react": "^17.0.2",
