--- a/package/components/package.json
+++ b/package/components/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^17.0.52",
     "athena-design-tokens": "^0.1.7",
     "enzyme": "^3.11.0",
-    "i18next": "^20.3.4",
+    "i18next": "22.1.4",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-autosize-textarea": "^7.1.0",
