--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -118,6 +118,7 @@
 		},
 		"scripts": {
 				"dev": "webpack serve --mode development --progress --color --config ./webpack/dev.config.js",
+				"dev:mock": "webpack serve --mode development --node-env mock --progress --color --config ./webpack/dev.config.js",
 				"build": "webpack --mode production --progress --color --config ./webpack/build.config.js && node bin/versionBuild.js",
 				"server": "pm2-runtime start ecosystem.config.js --only app-production",
 				"server:dev": "pm2-runtime start ecosystem.config.js --only app-dev",
