feat(global): MP-3091 add report options panel first step

--- a/package/components/tsconfig.json
+++ b/package/components/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "jsx": "react"
+  },
   "extends": "../../tsconfig.json",
   "references": [
     { "path": "../../package/store" },
